# myWebsocket

./: CMakeLists.txt  trace_can6_py03_steering.json
include/: WebsocketClient.h  WebsocketServer.h
include/nlohmann/detail/conversions/: .from_json.hpp.un~  from_json.hpp
lib/: HDMapModule.lib  SimOneAPI.lib
lib/boost/win/: SimOneAPI.lib  libboost_date_time-vc141-mt-x64-1_78.lib  libboost_random-vc141-mt-x64-1_78.lib  libboost_regex-vc141-mt-x64-1_78.lib  libboost_system-vc141-mt-x64-1_78.lib
src/: MsgProducer.cpp  MsgVerification.cpp  WebsocketClient.cpp  WebsocketServer.cpp  parseTxT.cpp
